2002-09-13  Maciej Stachowiak  <mjs@apple.com>

	WebKit changes for:
	
	- fixed 3032238 - Eliminate "Ask each time" choice for cookies
	
        * Panels.subproj/WebStandardPanels.h:
        * Panels.subproj/WebStandardPanels.m:
        (-[WebStandardPanels useStandardAuthenticationPanel]):
        * WebCoreSupport.subproj/WebCookieAdapter.m:
        (-[WebCookieAdapter cookiesEnabled]):
        * WebKit.pbproj/project.pbxproj:

2002-09-13  Darin Adler  <darin@apple.com>

	Added assertions, and dealt with some breakage I created while
	trying to fix, here, what I broke in WebCore.

        * Plugins.subproj/WebPluginView.m: (-[WebNetscapePluginView start]):
	Do get the dataSource from our parent when we are being used as an
	object in a view rather than a document view.

        * Plugins.subproj/WebPluginStream.m:
        * WebView.subproj/WebDataSource.m:
        * WebView.subproj/WebFrame.m:
	Leave in the assertions I used to debug.

2002-09-13  Darin Adler  <darin@apple.com>

	- fixed 3031685 -- The text encoding setting is not propagated to subframes

        * WebView.subproj/WebDocument.h: Remove old WebDocumentTextEncoding methods,
	add supportsTextEncoding.
        * WebView.subproj/WebController.m:
        (-[WebController supportsTextEncoding]): Check the document view to see if
	it supports WebDocumentTextEncoding and returns YES.
        (-[WebController setCustomTextEncoding:]): Call _reloadAllowingStaleDataWithOverrideEncoding.
        (-[WebController resetTextEncoding]): Ditto.
        (-[WebController _mainFrameOverrideEncoding]): Added. Gets encoding from the data source
	of the main frame; provisional if there, main if not.
        (-[WebController hasCustomTextEncoding]): Call _mainFrameOverrideEncoding.
        (-[WebController customTextEncoding]): Ditto.

        * WebView.subproj/WebDataSourcePrivate.m:
        (-[WebDataSource _setParent:]): Set the override encoding to the parent's.

        * WebView.subproj/WebFrame.m: