@@ -1,3 +1,14 @@
+2002-09-13  Richard Williamson (Home)  <rjw@apple.com>
+
+        Fixed 3050636.  90% solution.  The "Display Images Automatically"
+        preference will be used to disallow image draggging.  So if this
+        is set after pages have loaded, their images will not be draggable,
+        and vice-versa.  Not disastrous as dragging in either case has little
+        or no negative consequences.
+        
+        * WebView.subproj/WebHTMLView.m:
+        (-[WebHTMLView mouseDragged:]):
+
 2002-09-13  Maciej Stachowiak  <mjs@apple.com>
 
 	WebKit changes for:
